Adicionando funcionalidades de editora